--- a/index.html
+++ b/index.html
@@ -7,37 +7,23 @@
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js" charset="utf-8"></script>
   <title>Current English Premier League Standings</title>
-  <nav>
-    <h5>Home</h5>
-    <h5>Top Scorers</h5>
+    <header>Home</header>
 </head>
-
-<article>
-
-  <body class='title'>
-    <p>
-    <h2>Top 5 Soccer Teams In England</h2>
-    <img src="https://s.abcnews.com/images/Sports/WireAP_0692e035b79440cdad96070d3c8294ba_16x9_992.jpg"
-      alt="Premier League Trophy">
-    </p>
-  </body>
-</article>
-<section class='body'>
-  <body class='body1'>
-    <h3 class='team1'></h3>
+<body>
+  <p class="main">
+  <h2>Top 5 Soccer Teams In England</h2>
+  </p>
+    <h3 class='team1'>#1</h3>
     <p id='team1'></p>
-    <h3 class='team2'></h3>
+    <h3 class='team2'>#2</h3>
     <p id='team2'></p>
-    <h3 class='team3'></h3>
+    <h3 class='team3'>#3</h3>
     <p id='team3'></p>
-    <h3 class='team4'></h3>
+    <h3 class='team4'>#4</h3>
     <p id='team4'></p>
-    <h3 class='team5'></h3>
-    <p id='team'></p>5
-  </body>
-</section>
+    <h3 class='team5'>#5</h3>
+    <p id='team'></p>
+</body>
 <footer>
 </footer>
-</main>
-
 </html>
