--- a/index.html
+++ b/index.html
@@ -7,23 +7,30 @@
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js" charset="utf-8"></script>
   <title>Current English Premier League Standings</title>
-    <header>Home</header>
 </head>
-<body>
-  <p class="main">
-  <h2>Top 5 Soccer Teams In England</h2>
-  </p>
-    <h3 class='team1'>#1</h3>
-    <p id='team1'></p>
-    <h3 class='team2'>#2</h3>
-    <p id='team2'></p>
-    <h3 class='team3'>#3</h3>
-    <p id='team3'></p>
-    <h3 class='team4'>#4</h3>
-    <p id='team4'></p>
-    <h3 class='team5'>#5</h3>
-    <p id='team'></p>
-</body>
+<article>
+  <div class="background">
+    <body class="background">
+      <h2>Top 5 Soccer Teams In England</h2>
+    </body>
+  </div>
+</article>
+<section>
+  <div class="body">
+    <body class="main">
+      <h3 class='team1'>#1</h3>
+        <p id='team1'></p>
+      <h3 class='team2'>2</h3>
+        <p id='team2'></p>
+      <h3 class='team3'>#3</h3>
+        <p id='team3'></p>
+      <h3 class='team4'>#4</h3>
+        <p id='team4'></p>
+      <h3 class='team5'>#5</h3>
+        <p id='team'></p>
+    </body>
+  </div>
+</section>
 <footer>
 </footer>
 </html>
