--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
   <div class="body">
     <body class="main">
       <h3 class='team1'>#1</h3>
-        <h4 class="team1"></h4>
+        <h4 class="tteam1"></h4>
         <p id='team1'></p>
       <h3 class='team2'>#2</h3>
-        <h4 class="team2"></h4>
+        <h4 class="tteam2"></h4>
         <p id='team2'></p>
       <h3 class='team3'>#3</h3>
-        <h4 class="team3"></h4>
+        <h4 class="tteam3"></h4>
         <p id='team3'></p>
       <h3 class='team4'>#4</h3>
-        <h4 class="team4"></h4>
+        <h4 class="tteam4"></h4>
         <p id='team4'></p>
       <h3 class='team5'>#5</h3>
-        <h4 class="team5"></h4>
+        <h4 class="tteam5"></h4>
         <p id='team'></p>
     </body>
   </div>
