--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p id='team4'></p>
       <h3 class='team5'>#5</h3>
         <h4 class="tteam5"></h4>
-        <p id='team'></p>
+        <p id='team5'></p>
     </body>
   </div>
 </section>
