--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <script defer src="script.js" charset="utf-8"></script>
   <title>Current English Premier League Standings</title>
 </head>
@@ -18,19 +19,19 @@
 <section>
   <div class="body">
     <body class="main">
-      <h3 class='team1'>#1</h3>
+      <h3 class='team1'>1</h3>
         <h4 class="tteam1"></h4>
         <p id='team1'></p>
-      <h3 class='team2'>#2</h3>
+      <h3 class='team2'>2</h3>
         <h4 class="tteam2"></h4>
         <p id='team2'></p>
-      <h3 class='team3'>#3</h3>
+      <h3 class='team3'>3</h3>
         <h4 class="tteam3"></h4>
         <p id='team3'></p>
-      <h3 class='team4'>#4</h3>
+      <h3 class='team4'>4</h3>
         <h4 class="tteam4"></h4>
         <p id='team4'></p>
-      <h3 class='team5'>#5</h3>
+      <h3 class='team5'>5</h3>
         <h4 class="tteam5"></h4>
         <p id='team5'></p>
     </body>
