--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     </body>
   </div>
 </section>
+<aside></aside>
+  <div class="right"></div>
+<aside></aside> 
+  <div class="left"></div>
 <footer>
 </footer>
 </html>
