--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
   <title>Current English Premier League Standings</title>
 </head>
 <article>
-  <div class="background">
-    <body class="background">
-      <h2>Top 5 Soccer Teams In England</h2>
-    </body>
-  </div>
+  <h2>Top 5 Teams in the English Premier League</h2>
+  <img id="background" src ="https://s.abcnews.com/images/Sports/WireAP_0692e035b79440cdad96070d3c8294ba_16x9_992.jpg"/>
 </article>
 <section>
-  <div class="body">
-    <body class="main">
+  <div class="main">
+    <div class="firstteam">
       <h3 class='team1'>1</h3>
-        <h4 class="tteam1"></h4>
-        <p id='team1'></p>
-      <h3 class='team2'>2</h3>
+      <h4 class="tteam1"></h4>
+    </div>
+      <div class="secondteam">
+        <h3 class='team2'>2</h3>
         <h4 class="tteam2"></h4>
-        <p id='team2'></p>
-      <h3 class='team3'>3</h3>
+      </div>
+      <div class="thirdteam">
+        <h3 class='team3'>3</h3>
         <h4 class="tteam3"></h4>
-        <p id='team3'></p>
-      <h3 class='team4'>4</h3>
+      </div>
+      <div class="fourthteam">
+        <h3 class='team4'>4</h3>
         <h4 class="tteam4"></h4>
-        <p id='team4'></p>
-      <h3 class='team5'>5</h3>
+      </div>
+      <div class="fifthteam">
+        <h3 class='team5'>5</h3>
         <h4 class="tteam5"></h4>
-        <p id='team5'></p>
-    </body>
-  </div>
+      </div>>
+    </div>
 </section>
 <aside></aside>
   <div class="right"></div>
